# GAME

./: .gitignore  CMakeLists.txt  main.cpp  r.sh
config/: editorstate_keybinds.ini  gamestate_keybinds.ini  mainmenustate_keybinds.ini  window.ini
include/: AnimationComponent.hpp  Button.hpp  EditorState.hpp  Entity.hpp  Game.hpp  GameState.hpp  HitboxComponent.hpp  MainMenuState.hpp  MovementComponent.hpp  Player.hpp  State.hpp
src/: AnimationComponent.cpp  Button.cpp  EditorState.cpp  Entity.cpp  Game.cpp  GameState.cpp  HitboxComponent.cpp  MainMenuState.cpp  MovementComponent.cpp  Player.cpp  State.cpp
